changed title and added logo

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>React Coin</title>
+    <link rel="shortcut icon" href="./logo.png" />
+    <title>Cryptocurrency Data</title>
   </head>
   <body>
     <!-- this is where our React app will render -->
